Fixed technologies overflowing issue

--- a/src/styles/components/ProjectCard.scss
+++ b/src/styles/components/ProjectCard.scss
@@ -1,59 +1,103 @@
 @import "../color_palette.scss";
 
+@mixin BoxShadow($dp, $shadowColor: #000) {
+  @if $dp==0 {
+    box-shadow: none;
+  } @else if $dp==1 {
+    box-shadow: 0 1px 1px 0 change-color($shadowColor, $alpha: 0.14),
+      0 2px 1px -1px change-color($shadowColor, $alpha: 0.12),
+      0 1px 3px 0 change-color($shadowColor, $alpha: 0.2);
+  } @else if $dp==2 {
+    box-shadow: 0 2px 2px 0 change-color($shadowColor, $alpha: 0.14),
+      0 3px 1px -2px change-color($shadowColor, $alpha: 0.12),
+      0 1px 5px 0 change-color($shadowColor, $alpha: 0.2);
+  } @else if $dp==3 {
+    box-shadow: 0 3px 4px 0 change-color($shadowColor, $alpha: 0.14),
+      0 3px 3px -2px change-color($shadowColor, $alpha: 0.12),
+      0 1px 8px 0 change-color($shadowColor, $alpha: 0.2);
+  } @else if $dp==4 {
+    box-shadow: 0 4px 5px 0 change-color($shadowColor, $alpha: 0.14),
+      0 1px 10px 0 change-color($shadowColor, $alpha: 0.12),
+      0 2px 4px -1px change-color($shadowColor, $alpha: 0.2);
+  } @else if $dp==6 {
+    box-shadow: 0 6px 10px 0 change-color($shadowColor, $alpha: 0.14),
+      0 1px 18px 0 change-color($shadowColor, $alpha: 0.12),
+      0 3px 5px -1px change-color($shadowColor, $alpha: 0.2);
+  } @else if $dp==8 {
+    box-shadow: 0 8px 10px 1px change-color($shadowColor, $alpha: 0.14),
+      0 3px 14px 2px change-color($shadowColor, $alpha: 0.12),
+      0 5px 5px -3px change-color($shadowColor, $alpha: 0.2);
+  } @else if $dp==9 {
+    box-shadow: 0 9px 12px 1px change-color($shadowColor, $alpha: 0.14),
+      0 3px 16px 2px change-color($shadowColor, $alpha: 0.12),
+      0 5px 6px -3px change-color($shadowColor, $alpha: 0.2);
+  } @else if $dp==12 {
+    box-shadow: 0 12px 17px 2px change-color($shadowColor, $alpha: 0.14),
+      0 5px 22px 4px change-color($shadowColor, $alpha: 0.12),
+      0 7px 8px -4px change-color($shadowColor, $alpha: 0.2);
+  } @else if $dp==16 {
+    box-shadow: 0 16px 24px 2px change-color($shadowColor, $alpha: 0.14),
+      0 6px 30px 5px change-color($shadowColor, $alpha: 0.12),
+      0 8px 10px -5px rgba(0, 0, 0, 0.2);
+  } @else if $dp==24 {
+    box-shadow: 0 24px 38px 3px change-color($shadowColor, $alpha: 0.14),
+      0 9px 46px 8px change-color($shadowColor, $alpha: 0.12),
+      0 11px 15px -7px rgba(0, 0, 0, 0.2);
+  } @else {
+    @error "Invalid argument for $dp: {" + $dp + "}, look at the method definition for possible values";
+  }
+}
+
 .projectCardWrapper {
-  width: 720px;
+  width: 700px;
   height: 220px;
   position: relative;
 
-  &::before {
-    display: block;
-    position: absolute;
-
-    right: 0;
-    top: 11px;
-    transform: skewY(45deg);
-
-    content: "";
-    background: $secondary-color;
-    width: 20px;
-    height: 200px;
-  }
-
-  &::after {
-    display: block;
-    position: absolute;
-
-    bottom: 0;
-    left: 9px;
-    transform: skewX(45deg);
-
-    content: "";
-    background: $secondary-color;
-    width: 700px;
-    height: 20px;
-  }
-
   .projectCard {
     width: 700px;
-    height: 200px;
-    background: $background-darker;
+    height: 220px;
+    background: rgb(65, 65, 65);
+    @include BoxShadow(8);
+    transition: 0.5s;
+    border-radius: 3px;
+    right: 0px;
+    top: 0;
+    position: relative;
+
+    &:hover {
+      top: -5px;
+      right: 10px;
+      cursor: pointer;
+    }
 
     .cardHeader {
       display: flex;
+      flex-direction: row;
       .icon {
+        flex-shrink: 0;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        height: 220px;
         img {
-          height: 200px;
-          width: 200px;
+          height: 170px;
+          width: 170px;
           object-fit: cover;
+          margin-left: -20px;
+          @include BoxShadow(8);
+          border-radius: 3px;
         }
       }
 
       .cardTitle {
         flex-grow: 1;
-        padding: 20px;
+        flex-shrink: 1;
+        padding: 30px;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        min-width: 0;
+
         .title {
           margin: 0;
         }
@@ -61,11 +105,11 @@
           margin: 0;
         }
         .techs {
-          overflow-x: auto;
-          overflow-y: hidden;
-          width: 400px;
-          height: 50px;
-          white-space: nowrap;
+          overflow: hidden;
+          .techList {
+            height: 35px;
+            white-space: nowrap;
+          }
         }
       }
     }
